# sales-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/seed/: active_ingredients.csv  atc_classes.csv  contraindications.csv  drug_equivalences.csv  formula_items.csv  indications.csv  inventory.csv  otc_formulas.csv  products.csv
examples/: curl_examples.sh  rx_example.json  rx_paracetamol_oos.json  sym_example.json
infra/: docker-compose.yml
infra/postgres/: init.sql
sales_agent/: __init__.py  config.py  logging.py
sales_agent/api/: main.py  routes_chat.py  routes_health.py  routes_prescription.py  routes_symptom.py  schemas.py
sales_agent/cli/: __init__.py  __main__.py
sales_agent/db/: __init__.py  migrations.py  models.py  neo4j_client.py  pg.py  seed.py
sales_agent/graph/: builder.py  clarification.py  nodes_common.py  nodes_nlu.py  nodes_prescription.py  nodes_symptom.py  state.py
sales_agent/llm/: __init__.py  client.py  extractor.py
sales_agent/session/: __init__.py  store.py
sales_agent/tools/: __init__.py  catalog_resolver.py  equivalents.py  formulas.py  inventory.py  redflags.py  safety.py
scripts/: embed_formulas.py  seed_all.py  smoke_demo.py
tests/integration/: test_chat_endpoint.py
tests/unit/: test_catalog_resolver.py  test_check_inventory.py  test_clarification.py  test_intent_router.py  test_nlu_extractor.py  test_nlu_node.py  test_redflags.py  test_safety.py  test_schemas.py  test_session_store.py  test_substitutes_paracetamol.py  test_symptom_adapt.py  test_ui_route.py
(+5 files in other folders)
