[project]
name = "sales-agent"
version = "0.1.0"
description = "Pharmacy/grocery sales assistant agent (Vietnamese) powered by LangGraph + Neo4j + pgvector"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "neo4j>=5.23.0",
    "openai>=1.40.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
sales-agent = "sales_agent.cli.__main__:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sales_agent*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
